도커 이미지 플랫폼 옵션 추가
- amd64가 기본값이므로 arm64로 지정해준다.

--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -44,8 +44,14 @@ tasks.named('test') {
 tasks.register("prepareKotlinBuildScriptModel") {}
 
 jib {
-    from {
-        image = 'openjdk:17-jdk-slim' // 기본 이미지
+  from {
+        image = 'openjdk:17-jdk-slim'
+        platforms {
+            platform {
+                architecture = "arm64"
+                os = "linux"
+            }
+        } // 기본 이미지
     }
     to {
         image = rootProject.name + '-' + project.name + ":" + version
