money - 동기식 머니 충전 추가
- 비동기식 머니 충전 서비스와 분리

--- a/money/src/main/resources/application-docker.yml
+++ b/money/src/main/resources/application-docker.yml
@@ -46,6 +46,9 @@ kafka:
       inbox:
         events:
           name: decrease-money.inbox.events
+client:
+  banking:
+    url: "http://banking:8074"
 server:
   port: 8073
 
