payments - 결제 이벤트 실패 시 실패 사유 전달할 수 있도록 수정
- event, payload에 failureReason 필드 추가
- RequiresNewExecutor 사용하여 exception이 발생하면 트랜잭션을 별도로 실행시켜 이벤트를 롤백시키지 않고 실패 이벤트를 발행시킬 수 있도록함
- 이벤트 흐름 조정
  - 결제 요청 시 결제 요청 데이터를 적재, 승인이 된 후에는 결제 요청 데이터를 불러와 success 처리해줄 수 있도록 수정
  - 결제 요청부터 요청 내역을 적재해 흐름을 파악할 수 있도록 함

--- a/payments/src/main/resources/application-docker.yml
+++ b/payments/src/main/resources/application-docker.yml
@@ -64,10 +64,10 @@ client:
 
 kafka:
   topic:
-    payment-request:
+    payment-confirm-request:
       inbox:
         events:
-          name: payment-request.inbox.events
+          name: payment-confirm-request.inbox.events
     confirm-payment:
       inbox:
         events:
