--- a/money/src/main/resources/application.yml
+++ b/money/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
       ddl-auto: update
   data:
     redis:
-      host: redis
+      host: localhost
       port: 6379
   kafka:
     client-id: haru-money
