--- a/money/src/test/resources/application.yml
+++ b/money/src/test/resources/application.yml
@@ -19,6 +19,10 @@ spring:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.H2Dialect
+  data:
+    redis:
+      host: localhost
+      port: 6379
   kafka:
     client-id: haru-money
     consumer:
