kafka kraft모드 적용, log4j2 적용, elk 구성, tracing 적용
- zookeeper 의존 제거하는 kraft모드 사용
- logback보다 성능이 좋다고 알려진 log4j2 적용
- elk 구성
- 요청 추적 가능하도록 tracing 적용
 - zipkin 임시 disable,, 메인 메모리 이슈..

--- a/auth/src/main/resources/application-docker.yml
+++ b/auth/src/main/resources/application-docker.yml
@@ -25,5 +25,12 @@ client:
 server:
   port: 8072
 logging:
-  level:
-    root: debug
+  config: classpath:log4j2-spring-docker.xml
+management:
+  zipkin:
+    tracing:
+      export:
+        enabled: false
+  tracing:
+    sampling:
+      probability: 1
