--- a/money/src/main/resources/application.yml
+++ b/money/src/main/resources/application.yml
@@ -51,4 +51,13 @@ client:
     url: "http://banking:8074"
 server:
   port: 8073
-
+logging:
+  config: classpath:log4j2-spring.xml
+management:
+  zipkin:
+    tracing:
+      export:
+        enabled: false
+  tracing:
+    sampling:
+      probability: 1
