--- a/orchestrator/src/main/resources/application.yml
+++ b/orchestrator/src/main/resources/application.yml
@@ -57,3 +57,13 @@ kafka:
       payment-confirmed:
         inbox:
           events: PaymentConfirmedEvent.inbox.events
+logging:
+  config: classpath:log4j2-spring.xml
+management:
+  zipkin:
+    tracing:
+      export:
+        enabled: false
+  tracing:
+    sampling:
+      probability: 1
