--- a/banking/src/main/resources/application-docker.yml
+++ b/banking/src/main/resources/application-docker.yml
@@ -16,7 +16,7 @@ spring:
     hibernate:
       ddl-auto: update
   kafka:
-    bootstrap-servers: kafka:29092
+    bootstrap-servers: kafka-1:29092,kafka-2:29092,kafka-3:29092
     client-id: haru-banking
     consumer:
       auto-offset-reset: earliest
@@ -38,3 +38,13 @@ kafka:
       inbox:
         events:
           name: request-firm-banking.inbox.events
+logging:
+  config: classpath:log4j2-spring-docker.xml
+management:
+  zipkin:
+    tracing:
+      export:
+        enabled: false
+  tracing:
+    sampling:
+      probability: 1
