--- a/orchestrator/src/main/resources/application-docker.yml
+++ b/orchestrator/src/main/resources/application-docker.yml
@@ -16,7 +16,7 @@ spring:
     hibernate:
       ddl-auto: update
   kafka:
-    bootstrap-servers: kafka:29092
+    bootstrap-servers: kafka-1:29092,kafka-2:29092,kafka-3:29092
     client-id: haru-orchestrator
     consumer:
       auto-offset-reset: earliest
@@ -57,3 +57,13 @@ kafka:
       payment-confirmed:
         inbox:
           events: PaymentConfirmedEvent.inbox.events
+logging:
+  config: classpath:log4j2-spring-docker.xml
+management:
+  zipkin:
+    tracing:
+      export:
+        enabled: false
+  tracing:
+    sampling:
+      probability: 1
