--- a/payments/src/main/resources/application-docker.yml
+++ b/payments/src/main/resources/application-docker.yml
@@ -21,7 +21,7 @@ spring:
       auto-offset-reset: earliest
       enable-auto-commit: true
       group-id: haru-payments
-    bootstrap-servers: kafka:29092
+    bootstrap-servers: kafka-1:29092,kafka-2:29092,kafka-3:29092
     listener:
       concurrency: 1
       missing-topics-fatal: true
@@ -72,3 +72,13 @@ kafka:
       inbox:
         events:
           name: confirm-payment.inbox.events
+logging:
+  config: classpath:log4j2-spring-docker.xml
+management:
+  zipkin:
+    tracing:
+      export:
+        enabled: false
+  tracing:
+    sampling:
+      probability: 1
