도커 이미지 최적화
- jdk -> jre

--- a/money/build.gradle
+++ b/money/build.gradle
@@ -71,7 +71,7 @@ tasks.register("prepareKotlinBuildScriptModel") {}
 
 jib {
   from {
-        image = 'openjdk:17-jdk-slim'
+        image = 'bellsoft/liberica-openjre-alpine:17'
         platforms {
             platform {
                 architecture = "arm64"
