--- a/payments/build.gradle
+++ b/payments/build.gradle
@@ -77,7 +77,7 @@ compileJava {
 
 jib {
   from {
-        image = 'openjdk:17-jdk-slim'
+        image = 'bellsoft/liberica-openjre-alpine:17'
         platforms {
             platform {
                 architecture = "arm64"
