payments - authorization-uri, token-uri, jwt-set-uri 지정
auth-server와 독립적으로 실행될 수 있도록 직접지정

--- a/payments/src/main/resources/application-docker.yml
+++ b/payments/src/main/resources/application-docker.yml
@@ -51,7 +51,9 @@ spring:
             client-name: payments-authorization-code
         provider:
           spring:
-            issuer-uri: http://auth:8072
+            authorization-uri: http://auth:8072/oauth2/authorize
+            token-uri: http://auth:8072/oauth2/token
+            jwk-set-uri: http://auth:8072/oauth2/jwks
 server.port: 8071
 
 client:
