--- a/payments/build.gradle
+++ b/payments/build.gradle
@@ -23,6 +23,7 @@ configurations {
 }
 
 repositories {
+    maven { url 'https://jitpack.io' }
     mavenCentral()
 }
 
@@ -48,6 +49,7 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    implementation("com.github.pjh612:alert:1.0.0")
     runtimeOnly 'org.apache.logging.log4j:log4j-layout-template-json'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
