--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_USER=user
       - MYSQL_PASSWORD=password
+    volumes:
+      - ./mysql:/var/lib/mysql
   connect:
     image: quay.io/debezium/connect
     links:
