--- a/common/build.gradle
+++ b/common/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.9.1'
     implementation 'com.fasterxml.jackson.module:jackson-module-jakarta-xmlbind-annotations:2.18.2'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.45.0'
     compileOnly 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
     compileOnly 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
