--- a/payments/build.gradle
+++ b/payments/build.gradle
@@ -44,15 +44,17 @@ dependencies {
     implementation 'io.opentelemetry:opentelemetry-exporter-zipkin'
     implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
     implementation 'org.springframework.kafka:spring-kafka'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2' // 최신 버전
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.45.0'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-    implementation("com.github.pjh612:alert:1.0.0")
+    implementation("com.github.pjh612:alert:1.1.0")
     runtimeOnly 'org.apache.logging.log4j:log4j-layout-template-json'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'it.ozimov:embedded-redis:0.7.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
